[gd_scene load_steps=18 format=3 uid="uid://bjcmhu45vm2wb"]

[ext_resource type="Script" uid="uid://doqgdqnhr86v2" path="res://godot/scripts/ui/main_menu.gd" id="1_k7wsk"]
[ext_resource type="Texture2D" uid="uid://csjv5uqvmpj6j" path="res://godot/assets/backgrounds/BlackWallpaper.png" id="2_r52ft"]
[ext_resource type="Texture2D" uid="uid://bnb4yyxtvguf4" path="res://godot/assets/backgrounds/RioVoorhess.png" id="4_dlgj5"]
[ext_resource type="Texture2D" uid="uid://b3tpvvufr746h" path="res://godot/assets/backgrounds/HalloweenTryOn_Text.png" id="4_nyw0k"]
[ext_resource type="Script" uid="uid://cylyt1ds3100x" path="res://godot/scripts/ui/rain_layer.gd" id="4_yb5iy"]
[ext_resource type="PackedScene" uid="uid://ycnk3o6qdt8e" path="res://godot/scenes/transitions/fade_transition.tscn" id="12_6rumh"]

[sub_resource type="Animation" id="Animation_yb5iy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../LightningLayer/LightningFlash:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_7bgqf"]
resource_name = "spook"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.35, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../LightningLayer/LightningFlash:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.845), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dlgj5"]
_data = {
&"RESET": SubResource("Animation_yb5iy"),
&"spook": SubResource("Animation_7bgqf")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_r52ft"]
load_path = "res://.godot/imported/TryOn_Normal.png-8e1c28313eff2cae76a037e8b9bbdad1.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7bgqf"]
load_path = "res://.godot/imported/TryOn_Hover.png-84ac8469a66ae4071c55cd1564ada78f.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_yb5iy"]
load_path = "res://.godot/imported/Settings_Normal.png-5a93fe47f780f0eaab650e3359e9ed3b.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dlgj5"]
load_path = "res://.godot/imported/Settings_Hover.png-9272c57c7169ecfd87f4e95b1eafb7d7.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_38u13"]
load_path = "res://.godot/imported/About_Normal.png-7b46a5e562d1df0b90f762ca35d1429e.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_le3ah"]
load_path = "res://.godot/imported/About_Hover.png-77aec56c14d7b1bd9fd10c743b5e19fe.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pcoab"]
load_path = "res://.godot/imported/Quit_Normal.png-87a8b169b878c0de8aed264d1104a673.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_yuq35"]
load_path = "res://.godot/imported/Quit_Hover.png-f915272b8a860e94bd3cd7c7003ad33a.ctex"

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_k7wsk")

[node name="BlackWallpaper" type="Sprite2D" parent="."]
position = Vector2(937, 533)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_r52ft")

[node name="HalloweenTryOnText" type="Sprite2D" parent="."]
position = Vector2(1559, 196)
scale = Vector2(0.802149, 0.766075)
texture = ExtResource("4_nyw0k")

[node name="SpookContainer" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(669, 563)

[node name="TextureRect" type="TextureRect" parent="SpookContainer"]
modulate = Color(1, 1, 1, 0.371)
offset_left = -640.0
offset_top = -522.0
offset_right = 321.0
offset_bottom = 242.0
scale = Vector2(1.3, 1.3)
texture = ExtResource("4_dlgj5")
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpookContainer"]
libraries = {
&"": SubResource("AnimationLibrary_dlgj5")
}

[node name="RainLayer" type="Node2D" parent="."]
script = ExtResource("4_yb5iy")
spawn_area_width = 1920.0
min_speed = 2000.0
max_speed = 2050.0
spawn_rate = 0.01
drop_length = 50.0

[node name="Button_manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 1413.0
offset_top = 441.0
offset_right = 1658.0
offset_bottom = 540.0
texture_normal = SubResource("CompressedTexture2D_r52ft")
texture_pressed = SubResource("CompressedTexture2D_7bgqf")
texture_hover = SubResource("CompressedTexture2D_7bgqf")

[node name="Settings" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 1396.0
offset_top = 562.0
offset_right = 1692.0
offset_bottom = 677.0
texture_normal = SubResource("CompressedTexture2D_yb5iy")
texture_pressed = SubResource("CompressedTexture2D_dlgj5")
texture_hover = SubResource("CompressedTexture2D_dlgj5")

[node name="About" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 1441.0
offset_top = 714.0
offset_right = 1654.0
offset_bottom = 844.0
texture_normal = SubResource("CompressedTexture2D_38u13")
texture_pressed = SubResource("CompressedTexture2D_le3ah")
texture_hover = SubResource("CompressedTexture2D_le3ah")

[node name="Exit" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 1478.0
offset_top = 878.0
offset_right = 1647.0
offset_bottom = 970.0
texture_normal = SubResource("CompressedTexture2D_pcoab")
texture_pressed = SubResource("CompressedTexture2D_yuq35")
texture_hover = SubResource("CompressedTexture2D_yuq35")

[node name="LightningLayer" type="CanvasLayer" parent="."]

[node name="LightningFlash" type="ColorRect" parent="LightningLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Fade_transition" parent="." instance=ExtResource("12_6rumh")]
visible = false
offset_right = 2123.0
offset_bottom = 1167.0

[node name="Fade_timer" type="Timer" parent="Fade_transition"]

[node name="SpookTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="pressed" from="Button_manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button_manager/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Button_manager/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="Button_manager/Exit" to="." method="_on_exit_pressed"]
[connection signal="timeout" from="Fade_transition/Fade_timer" to="." method="_on_fade_timer_timeout"]
[connection signal="timeout" from="SpookTimer" to="." method="_on_spook_timer_timeout"]
